--- a/pybo/templates/base.html
+++ b/pybo/templates/base.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="{{url_for('static', filename='bootstrap.min.css')}}">
      <!-- 기본 CSS -->
     <link rel="stylesheet" href="{{url_for('static', filename='style.css')}}">
-    <title>MOS</title>
+    <title>Test Board</title>
 </head>
 <body>
   <!-- 네비게이션 바 추가(유지보수 편의성을 위해 분리) -->
