--- a/pybo/templates/navbar.html
+++ b/pybo/templates/navbar.html
@@ -31,8 +31,8 @@
             <a href="{{ url_for('auth.login')}}" class="nav-link">로그인</a>
           </li>
         {% endif %}
-          <li class="nav-item">
-            <a href="{{ url_for('sheet.collaborative_sheet')}}" class="nav-link">오픈공유</a>
+          <li class="navbar-item">
+            <a href="{{ url_for('merchant.merchant_list')}}" class="nav-link">오픈 건수 분석</a>
           </li>
         </ul>
         <div class="col-4 input-group w-auto">
