--- a/pybo/templates/auth/login.html
+++ b/pybo/templates/auth/login.html
@@ -1,21 +1,27 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container">
-    <h5 class="my-3 border-bottom pb-2">로그인</h5>
-    <form method="post">
-        {{ form.csrf_token }}
-        {% include "form_errors.html" %}
-        <div class="mb-3">
-            <label for="username">사용자 ID</label>
-            <input type="text" class="form-control" name="username" id="username"
-                   value="{{ form.username.data or '' }}">
+    <div class="row justify-content-center mt-5">
+        <div class="col-md-6">
+            <h5 class="my-3 border-bottom pb-2 text-center">로그인</h5>
+            <form method="post">
+                {{ form.csrf_token }}
+                {% include "form_errors.html" %}
+                <div class="mb-3">
+                    <label for="username">사용자 ID</label>
+                    <input type="text" class="form-control" name="username" id="username"
+                           value="{{ form.username.data or '' }}">
+                </div>
+                <div class="mb-3">
+                    <label for="password">비밀번호</label>
+                    <input type="password" class="form-control" name="password" id="password"
+                           value="{{ form.password.data or '' }}">
+                </div>
+                <div class="d-grid">
+                    <input type="submit" class="btn btn-outline-success" value="로그인">
+                </div>
+            </form>
         </div>
-        <div class="mb-3">
-            <label for="password">비밀번호</label>
-            <input type="password" class="form-control" name="password" id="password"
-                   value="{{ form.password.data or '' }}">
-        </div>
-        <input type="submit" class="btn btn-outline-success w-100 " value="로그인"></input>
-    </form>
+    </div>
 </div>
 {% endblock %}
